crates/wac-parser/tests/resolution/fail/mismatched-option.wac
package test:comp;

import x: interface {
    f: func(o: option<u8>);
};

let i = new foo:bar { x };
